--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
         background-color: darkslategray;
         max-width: 100%;
-        font-family: "Mono";
+        font-family: "Courier New", monospace;
         color: rgb(255, 255, 255);
       }
       @font-face {
@@ -29,15 +29,15 @@
     .topBar {
       text-align: left;
     }
-    a {color: white;}
+    a {color: white; overflow-wrap: break-word;}
     h1   {font-family: "silkscreennormal", Mono; color: rgb(255, 255, 255); text-align:center}
-    h2   {font-family: "Mono";color: rgb(255, 255, 255); text-align:center}
-    h3   {font-family: "Mono";color: rgb(255, 255, 255); text-align:center}
-    p    {font-family: "Mono";color: rgb(255, 255, 255);}
+    h2   {font-family: "Courier New", monospace;color: rgb(255, 255, 255); text-align:center; overflow-wrap: break-word;}
+    h3   {font-family: "Courier New", monospace;color: rgb(255, 255, 255); text-align:center; overflow-wrap: break-word;}
+    p    {font-family: "Courier New", monospace;color: rgb(255, 255, 255); overflow-wrap: break-word;}
     p.center {text-align:center}
-    .p2v1 {text-align:center; font-family: "Mono";color: rgb(255, 255, 255); padding-top: 2%; padding-bottom: 2%;}
+    .p2v1 {text-align:center; font-family: "Courier New", monospace;color: rgb(255, 255, 255); padding-top: 2%; padding-bottom: 2%;}
     .p2v2 {
-      font-family: "Mono";
+      font-family: "Courier New", monospace;
       color: rgb(255, 255, 255);
       border: 2px solid white;
       border-radius: 10px;
@@ -48,7 +48,8 @@
     #btnGo {
       background-color: rgb(100, 100, 100);
       border: none;
-      color: white; 
+      color: white;
+      font-family: "Courier New", monospace; 
       padding: 15px 32px;
       text-align: center;
       text-decoration: none;
@@ -70,12 +71,13 @@
       text-align: center;
       border: 1px solid white;
       border-radius: 7px;
+      overflow-wrap: break-word;
     }
     td.HowToHead {writing-mode: vertical-rl;}
     footer {
         display:flex;
         justify-content: center;
-        font-family: "Mono";
+        font-family: "Courier New", monospace;
         color: rgb(255, 255, 255);
         text-align: center;
         padding: 200px;
@@ -87,10 +89,12 @@
       text-align: center;
       background-color: gray;
       color: white;
+      font-family: "Courier New", monospace;
     }
     ::placeholder {
-      text-align:center;
+      text-align: center;
       color: white;
+      font-family: "Courier New", monospace;
     }
     ol {text-align: left; padding-left: 20%; padding-right: 20%;}
     .tiles{
@@ -106,6 +110,8 @@
       text-align: center;
       box-shadow: 0 5px 10px darkgray;
       padding: 3%;
+      font-family: "Courier New", monospace;
+      overflow-wrap: break-word;
     }
     @media (max-width: 1000px){.tiles{grid-template-columns: repeat(3, 30%);}}
     @media (max-width: 500px){.tiles{grid-template-columns: repeat(2, 30%);}}
@@ -127,7 +133,7 @@
         <p id="p2" class="p2v1"></p>
       </div>
       <footer>
-        Author:  <a href="https://github.com/heEXDe" target="_blank" style="text-decoration:none">https://github.com/heEXDe</a>
+        Author:  <a href="https://github.com/heEXDe" target="_blank" style="text-decoration:none">GitHub</a>
       </footer>
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.9.1/math.js'></script>
@@ -149,7 +155,7 @@ var p2 = document.getElementById("p2");
 
 // content for 'how to use' and 'about' pages
 hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTb\" class=\"center\"><tr><td class=\"HowToHead\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td class=\"HowToHead\" rowspan=\"13\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>[number]! <br> example: = 9!</td></tr><tr><td>determinant of <br> a matrix: </td><td>det([num1A, ..., numNA; num1B, ..., numNB]) <br> example: = det([1, 4; 3, 1])</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]_sc(optional)<br>sc - special characters</td></tr><tr><td>example: </td><td>random 12<br>or<br>random 15 sc</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Currency converter</td><td>to convert currency A to B: </td><td>currency_[amount]_[A]_to_[B]</td></tr><tr><td>example: </td><td>currency 10 USD to EUR</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Unit converter</td><td>to convert unit A to B: <br> (m to in, ft, yd, mi) <br> (in to cm, m)<br> (kg to oz, lb)</td><td>unitconv_[A]_to_[B]<br>or<br>= [unit A] to [unit B]</td></tr><tr><td>example: </td><td>unitconv 5.5 m to in<br>or<br>= 150 lbs to kg</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Search engine</td><td>to search the web: </td><td>search_[the search]</td></tr><tr><td>example: </td><td>search USA population</td></tr></table>";
-aboutText.innerHTML = "<h3>About</h3><br><hr>Hephaes (from the Greek god of artisans, blacksmiths, carpenters, craftsmen, metallurgy, metalworking and sculpture - Hephaestus) is a multifunctional open source tool. Multifunctional? Yes, or at least that's the ultimate intent of the project. The number of available functions will grow over time.<br><hr><div class=\"tiles\"><div class=\"oneTile\"><p>open source: <a href=\"https://github.com/heEXDe/hephaes\" target=\"_blank\">https://github.com/heEXDe/hephaes</a></p></div><div class=\"oneTile\"><p>Mathematics: <br> basic operations (addition, subtraction, multiplication, division, multiplication, roots, logarithms), trigonometric functions, calculate derivatives</p></div><div class=\"oneTile\"><p>Books: <br> find search results by book titles in the Open Library (<a href=\"https://openlibrary.org/\"  target=\"_blank\">https://openlibrary.org/</a>) database</p></div><div class=\"oneTile\"><p>Random generator: <br> generate a random string / password</p></div><div class=\"oneTile\"><p>Currency converter: <br> convert one currency to the other</p></div><div class=\"oneTile\"><p>Units of measure converter: <br> convert meters, inches and kilograms to pounds, inches, yards, miles, ounces and feet</p></div><div class=\"oneTile\"><p>Search engine (redirection to Brave Search): <br> search the web using privacy preserving search engine - <a href=\"https://search.brave.com/\"  target=\"_blank\">Brave Search</a></p></div></div>";
+aboutText.innerHTML = "<h3>About</h3><br><hr>Hephaes (from the Greek god of artisans, blacksmiths, carpenters, craftsmen, metallurgy, metalworking and sculpture - Hephaestus) is a multifunctional open source tool. Multifunctional? Yes, or at least that's the ultimate intent of the project. The number of available functions will grow over time.<br><hr><div class=\"tiles\"><div class=\"oneTile\"><p>open source: <br><a href=\"https://github.com/heEXDe/hephaes\" target=\"_blank\">GitHub</a></p></div><div class=\"oneTile\"><p>Mathematics: <br> basic operations (addition, subtraction, multiplication, division, multiplication, roots, logarithms), trigonometric functions, calculate derivatives</p></div><div class=\"oneTile\"><p>Books: <br> find search results by book titles in the Open Library (<a href=\"https://openlibrary.org/\"  target=\"_blank\">Open Library</a>) database</p></div><div class=\"oneTile\"><p>Random generator: <br> generate a random string / password</p></div><div class=\"oneTile\"><p>Currency converter: <br> convert one currency to the other</p></div><div class=\"oneTile\"><p>Units of measure converter: <br> convert meters, inches and kilograms to pounds, inches, yards, miles, ounces and feet</p></div><div class=\"oneTile\"><p>Search engine (redirection to Brave Search): <br> search the web using privacy preserving search engine - <a href=\"https://search.brave.com/\"  target=\"_blank\">Brave Search</a></p></div></div>";
 
 // set id for elements
 hHowToUseIt.setAttribute("id", "hHowToUseIt");
