--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       margin-left: auto;
       margin-right: auto;
     }
-    #infoTb td {
+    #infoTab td {
+      margin-left: auto;
+      margin-right: auto;
       padding: 15px;
       color: white;
       text-align: center;
@@ -74,6 +76,15 @@
       overflow-wrap: break-word;
     }
     td.HowToHead {writing-mode: vertical-rl;}
+    #weatherTab td {
+      margin-left: auto;
+      margin-right: auto;
+      padding: 15px;
+      color: white;
+      text-align: center;
+      border: 1px solid white;
+      overflow-wrap: break-word;
+    }
     footer {
         display:flex;
         justify-content: center;
@@ -154,7 +165,7 @@ var b1 = document.getElementById("b1");
 var p2 = document.getElementById("p2");
 
 // content for 'how to use' and 'about' pages
-hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTb\" class=\"center\"><tr><td class=\"HowToHead\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td class=\"HowToHead\" rowspan=\"13\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>[number]! <br> example: = 9!</td></tr><tr><td>determinant of <br> a matrix: </td><td>det([num1A, ..., numNA; num1B, ..., numNB]) <br> example: = det([1, 4; 3, 1])</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]_sc(optional)<br>sc - special characters</td></tr><tr><td>example: </td><td>random 12<br>or<br>random 15 sc</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Currency converter</td><td>to convert currency A to B: </td><td>currency_[amount]_[A]_to_[B]</td></tr><tr><td>example: </td><td>currency 10 USD to EUR</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Unit converter</td><td>to convert unit A to B: <br> (m to in, ft, yd, mi) <br> (in to cm, m)<br> (kg to oz, lb)</td><td>unitconv_[A]_to_[B]<br>or<br>= [unit A] to [unit B]</td></tr><tr><td>example: </td><td>unitconv 5.5 m to in<br>or<br>= 150 lbs to kg</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Search engine</td><td>to search the web: </td><td>search_[the search]</td></tr><tr><td>example: </td><td>search USA population</td></tr></table>";
+hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTab\" class=\"center\"><tr><td class=\"HowToHead\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td class=\"HowToHead\" rowspan=\"13\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>[number]! <br> example: = 9!</td></tr><tr><td>determinant of <br> a matrix: </td><td>det([num1A, ..., numNA; num1B, ..., numNB]) <br> example: = det([1, 4; 3, 1])</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]_sc(optional)<br>sc - special characters</td></tr><tr><td>example: </td><td>random 12<br>or<br>random 15 sc</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Currency converter</td><td>to convert currency A to B: </td><td>currency_[amount]_[A]_to_[B]</td></tr><tr><td>example: </td><td>currency 10 USD to EUR</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Unit converter</td><td>to convert unit A to B: <br> (m to in, ft, yd, mi) <br> (in to cm, m)<br> (kg to oz, lb)</td><td>unitconv_[A]_to_[B]<br>or<br>= [unit A] to [unit B]</td></tr><tr><td>example: </td><td>unitconv 5.5 m to in<br>or<br>= 150 lbs to kg</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Search engine</td><td>to search the web: </td><td>search_[the search]</td></tr><tr><td>example: </td><td>search USA population</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Weather</td><td>get the temperature, cloud <br> cover, and rain <br> for the indicated location <br> (geographic coordinate system)<br>for the current day: </td><td>weather_[latitude]_[longitude]</td></tr><tr><td>example: </td><td>weather 50.0 14.0</td></tr></table>";
 aboutText.innerHTML = "<h3>About</h3><br><hr>Hephaes (from the Greek god of artisans, blacksmiths, carpenters, craftsmen, metallurgy, metalworking and sculpture - Hephaestus) is a multifunctional open source tool. Multifunctional? Yes, or at least that's the ultimate intent of the project. The number of available functions will grow over time.<br><hr><div class=\"tiles\"><div class=\"oneTile\"><p>open source: <br><a href=\"https://github.com/heEXDe/hephaes\" target=\"_blank\">GitHub</a></p></div><div class=\"oneTile\"><p>Mathematics: <br> basic operations (addition, subtraction, multiplication, division, multiplication, roots, logarithms), trigonometric functions, calculate derivatives</p></div><div class=\"oneTile\"><p>Books: <br> find search results by book titles in the Open Library (<a href=\"https://openlibrary.org/\"  target=\"_blank\">Open Library</a>) database</p></div><div class=\"oneTile\"><p>Random generator: <br> generate a random string / password</p></div><div class=\"oneTile\"><p>Currency converter: <br> convert one currency to the other</p></div><div class=\"oneTile\"><p>Units of measure converter: <br> convert meters, inches and kilograms to pounds, inches, yards, miles, ounces and feet</p></div><div class=\"oneTile\"><p>Search engine (redirection to Brave Search): <br> search the web using privacy preserving search engine - <a href=\"https://search.brave.com/\"  target=\"_blank\">Brave Search</a></p></div></div>";
 
 // set id for elements
@@ -224,13 +235,23 @@ function book(x){
 }
 // fn to get current weather - not working
 function weather(x){ 
-  let a = x.slice(8);
-  let url = ``;
-  // document.getElementById("p2").className = "oneTile";
+  let url = `https://api.open-meteo.com/v1/forecast?latitude=${x.split(' ')[1]}&longitude=${x.split(' ')[2]}&hourly=temperature_2m,apparent_temperature,rain,cloud_cover&forecast_days=1`;
   //making a request to the API
   fetch(url)
   .then((response) => response.json())
-  .then((json) => p2.innerHTML = `current weather: ${json}`)
+  .then((json) =>  {
+    let weatherStrTable = `<table id=\"weatherTab\" class=\"center\"><tr><td>time (hours)</td><td>temperature (&#8451;)</td><td>apparent temperature (&#8451;)</td><td>cloud cover (%)</td><td>rain (mm)</td></tr>`;
+    for(let i=0; i<json["hourly"]["apparent_temperature"].length; i++){weatherStrTable = weatherStrTable + ` <tr>
+    <td>${json["hourly"]["time"][i].split('T')[0]}<br>${json["hourly"]["time"][i].split('T')[1]}</td> 
+    <td>${json["hourly"]["temperature_2m"][i]}</td>
+    <td>${json["hourly"]["apparent_temperature"][i]}</td>
+    <td>${json["hourly"]["cloud_cover"][i]}</td>
+    <td>${json["hourly"]["rain"][i]}</td>
+    </tr> `;}
+    weatherStrTable = weatherStrTable + `</table><br><a href=\"https://open-meteo.com/\" target=\"_blank\">Weather data by Open-Meteo.com</a><br>(<a href=\"https://github.com/open-meteo/open-meteo/\" target=\"_blank\">GitHub</a>)`;
+    p2.innerHTML = weatherStrTable;    
+    console.log(json)
+  })
   .catch(function (error){console.error(`Error fetching data: ${error.message}`)});
 }
 // fn to generate random string / password
