--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Hephaes</title>
   <!-- source of the font: https://www.fontsquirrel.com/fonts/Silkscreen -->
   <!-- <link rel="stylesheet" href="https://bafybeiait6atbrur3zr3mdny3qed26kj2d2s5e5qbl2dqhxqojlxpxkg3q.ipfs.dweb.link/?filename=stylesheet.css" type="text/css" charset="utf-8"/> -->
+  <!-- GitHub logo for the footer-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <style>
     body {
@@ -13,6 +14,8 @@
         max-width: 100%;
         font-family: "Courier New", monospace;
         color: rgb(255, 255, 255);
+        font-size: 1rem;
+        text-align: center;
       }
       @font-face {
     font-family: 'silkscreennormal';
@@ -26,16 +29,14 @@
     font-weight: normal;
     font-style: normal;
   }
-    div.center {text-align:center;}
-    .topBar {
+    #topBar {
       text-align: left;
     }
     a {color: white; overflow-wrap: break-word;}
-    h1   {font-family: "silkscreennormal", Mono; color: rgb(255, 255, 255); text-align:center}
-    h2   {font-family: "Courier New", monospace;color: rgb(255, 255, 255); text-align:center; overflow-wrap: break-word;}
-    h3   {font-family: "Courier New", monospace;color: rgb(255, 255, 255); text-align:center; overflow-wrap: break-word;}
-    p    {font-family: "Courier New", monospace;color: rgb(255, 255, 255); overflow-wrap: break-word;}
-    p.center {text-align:center}
+    h1   {font-family: "silkscreennormal", Mono;}
+    h2   {overflow-wrap: break-word;}
+    h3   {overflow-wrap: break-word;}
+    p    {overflow-wrap: break-word;}
     .p2v1 {text-align:center; font-family: "Courier New", monospace;color: rgb(255, 255, 255); padding-top: 2%; padding-bottom: 2%;}
     .p2v2 {
       font-family: "Courier New", monospace;
@@ -49,10 +50,9 @@
     #btnGo {
       background-color: rgb(100, 100, 100);
       border: none;
-      color: white;
+      color: rgb(255, 255, 255);
       font-family: "Courier New", monospace; 
       padding: 15px 32px;
-      text-align: center;
       text-decoration: none;
       display: inline-block;
       margin: 2% 2%;
@@ -89,8 +89,6 @@
     footer {
         display:flex;
         justify-content: center;
-        font-family: "Courier New", monospace;
-        color: rgb(255, 255, 255);
         text-align: center;
         padding: 200px;
       }
@@ -101,7 +99,6 @@
       text-align: center;
       background-color: gray;
       color: white;
-      font-family: "Courier New", monospace;
     }
     ::placeholder {
       text-align: center;
@@ -110,8 +107,12 @@
     }
     ol {text-align: left; padding-left: 20%; padding-right: 20%;}
     .tiles{
+      /*
       display: grid;
       grid-template-columns: repeat(3, 30%);
+      */
+      display: flex;
+      flex-wrap: wrap;
       margin-top: 5%;
       justify-content: center;
     }
@@ -122,12 +123,15 @@
       text-align: center;
       box-shadow: 0 5px 10px darkgray;
       padding: 3%;
+      width: 20%;
       font-family: "Courier New", monospace;
       overflow-wrap: break-word;
     }
+    /*
     @media (max-width: 1000px){.tiles{grid-template-columns: repeat(3, 30%);}}
     @media (max-width: 500px){.tiles{grid-template-columns: repeat(2, 30%);}}
     @media (max-width: 250px){.tiles{grid-template-columns: repeat(1, 30%);}}
+    */
   </style>
 </head>
 <body>
@@ -136,10 +140,10 @@
         <a href="javascript:ch_page('about');" id="about">About</a> <a href="javascript:ch_page('howToUse');" id="howToUse">How to use it</a>
       </p>
       <a href="javascript:ch_page('title');" style="text-decoration:none"><h1 id="title">Hephaes</h1></a>
-      <p id="pMotto" class="center">multitool - in a single line of text</p>
+      <h3 id="pMotto">multitool - in a single line of text</h3>
     </div>
       <div id="div_1" class="center">
-        <input id="theText" name="the-text" type="text" placeholder="You question / command here ...">
+        <input id="theText" name="the-text" type="text" placeholder="Your question / command here ...">
         <br id="b1">
         <button class="bGo" id="btnGo">Go</button>
         <p id="p2" class="p2v1"></p>
@@ -168,7 +172,7 @@ var b1 = document.getElementById("b1");
 var p2 = document.getElementById("p2");
 
 // content for 'how to use' and 'about' pages
-hHowToUseIt.innerHTML = "<h2>How to use it:</h2><br> <table id=\"infoTab\" class=\"center\"><tr><td class=\"HowToHead\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td class=\"HowToHead\" rowspan=\"13\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>[number]! <br> example: = 9!</td></tr><tr><td>determinant of <br> a matrix: </td><td>det([num1A, ..., numNA; num1B, ..., numNB]) <br> example: = det([1, 4; 3, 1])</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]_sc(optional)<br>sc - special characters</td></tr><tr><td>example: </td><td>random 12<br>or<br>random 15 sc</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Currency converter</td><td>to convert currency A to B: </td><td>currency_[amount]_[A]_to_[B]</td></tr><tr><td>example: </td><td>currency 10 USD to EUR</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Unit converter</td><td>to convert unit A to B: <br> (m to in, ft, yd, mi) <br> (in to cm, m)<br> (kg to oz, lb)</td><td>unitconv_[A]_to_[B]<br>or<br>= [unit A] to [unit B]</td></tr><tr><td>example: </td><td>unitconv 5.5 m to in<br>or<br>= 150 lbs to kg</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Search engine</td><td>to search the web: </td><td>search_[the search]</td></tr><tr><td>example: </td><td>search USA population</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Weather</td><td>get the temperature, cloud <br> cover, and rain <br> for the indicated location <br> (geographic coordinate system)<br>for the current day: </td><td>weather_[latitude]_[longitude]</td></tr><tr><td>example: </td><td>weather 50.0 14.0</td></tr></table>";
+hHowToUseIt.innerHTML = "<h3>How to use it:</h3><br> <table id=\"infoTab\" class=\"center\"><tr><td class=\"HowToHead\" rowspan=\"2\">Books</td><td>example: </td><td>book lord of the rings</td></tr><tr><td>to start searching for a book: </td><td>book</td></tr><tr><td class=\"HowToHead\" rowspan=\"13\">Mathematics</td><td>example: </td><td>= 2*3.12 + 11.5/1.34</td></tr><tr><td>to start with mathematics: </td><td>=</td></tr><tr><td>addition: </td><td>+</td></tr><tr><td>substraction: </td><td>-</td></tr>   <tr><td>multiplication: </td><td>*</td></tr><tr><td>division: </td><td>/</td></tr><tr><td>exponentiation: </td><td>^</td></tr><tr><td>n-th root: </d><td>^(1/n)</td></tr><tr><td>logarithm: </td><td>log(x) - natural log.<br>loga(b) - of 'b' to base 'a'</td></tr><tr><td>trigonometric functions: </td><td>sin([degrees] deg) <br> cos([degrees] deg) <br> tan([degrees] deg) <br> cot([degrees] deg)</td></tr><tr><td>derivative: </td><td>_derivative_[variable]_[function (no spaces)] <br> example: = derivative x x^4-x</td></tr><tr><td>factorial: </td><td>[number]! <br> example: = 9!</td></tr><tr><td>determinant of <br> a matrix: </td><td>det([num1A, ..., numNA; num1B, ..., numNB]) <br> example: = det([1, 4; 3, 1])</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Random password / <br> string generator</td><td>to generate a password / <br> string of the desired length: </td><td>random_[the length of the password]_sc(optional)<br>sc - special characters</td></tr><tr><td>example: </td><td>random 12<br>or<br>random 15 sc</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Currency converter</td><td>to convert currency A to B: </td><td>currency_[amount]_[A]_to_[B]</td></tr><tr><td>example: </td><td>currency 10 USD to EUR</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Unit converter</td><td>to convert unit A to B: <br> (m to in, ft, yd, mi) <br> (in to cm, m)<br> (kg to oz, lb)</td><td>unitconv_[A]_to_[B]<br>or<br>= [unit A] to [unit B]</td></tr><tr><td>example: </td><td>unitconv 5.5 m to in<br>or<br>= 150 lbs to kg</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Search engine</td><td>to search the web: </td><td>search_[the search]</td></tr><tr><td>example: </td><td>search USA population</td></tr><tr><td class=\"HowToHead\" rowspan=\"2\">Weather</td><td>get the temperature, cloud <br> cover, and rain <br> for the indicated location <br> (geographic coordinate system)<br>for the current day: </td><td>weather_[latitude]_[longitude]</td></tr><tr><td>example: </td><td>weather 50.0 14.0</td></tr></table>";
 aboutText.innerHTML = "<h3>About</h3><br><hr>Hephaes (from the Greek god of artisans, blacksmiths, carpenters, craftsmen, metallurgy, metalworking and sculpture - Hephaestus) is a multifunctional open source tool. Multifunctional? Yes, or at least that's the ultimate intent of the project. The number of available functions will grow over time.<br><hr><div class=\"tiles\"><div class=\"oneTile\"><p>open source: <br><a href=\"https://github.com/heEXDe/hephaes\" target=\"_blank\">GitHub</a></p></div><div class=\"oneTile\"><p>Mathematics: <br> basic operations (addition, subtraction, multiplication, division, multiplication, roots, logarithms), trigonometric functions, calculate derivatives</p></div><div class=\"oneTile\"><p>Books: <br> find search results by book titles in the Open Library (<a href=\"https://openlibrary.org/\"  target=\"_blank\">Open Library</a>) database</p></div><div class=\"oneTile\"><p>Random generator: <br> generate a random string / password</p></div><div class=\"oneTile\"><p>Currency converter: <br> convert one currency to the other</p></div><div class=\"oneTile\"><p>Units of measure converter: <br> convert meters, inches and kilograms to pounds, inches, yards, miles, ounces and feet</p></div><div class=\"oneTile\"><p>Search engine (redirection to Brave Search): <br> search the web using privacy preserving search engine - <a href=\"https://search.brave.com/\"  target=\"_blank\">Brave Search</a></p></div><div class=\"oneTile\"><p>Weather: <br> get the temperature, cloud <br> cover, and rain <br> for the indicated location <br> (geographic coordinate system)</p></div></div>";
 
 // set id for elements
@@ -213,6 +217,10 @@ function chooseAction(text){
     uniConv(text);
   } else if(text.split(' ')[0] == "search"){
     search(text);
+  } else if(text.split(' ')[0] == "agc"){
+    agc(text);
+  } else if(text.split(' ')[0] == "awl"){
+    awl(text);
   } else {
     p2.innerHTML = 'Uncorrect command.';
   }
@@ -313,9 +321,30 @@ function uniConv(x){
     console.log(error);
   }
 }
+// fn generating a link to serach results from Brave search engine, for the provided search phrase
 function search(x){
   let a = x.slice(7).trim().replace(/[+]/g, '%2B').replace(/\s/g, '+');
   p2.innerHTML = "Results from the Brave Search: <br>" + `<a href=\"https://search.brave.com/search?q=${a}" target=\"_blank\" style=\"text-decoration:none\">https://search.brave.com/search?q=${a}</a>`
+}
+// fn checking if a file on the Arweave network is accessible through gateways other than the one specified in the input link
+function agc(x){
+  let gates = ["ar-io.dev", "permagate.io", "vilenarios.com", "arbr.pro", "bobinstein.com"]
+  for(gate in gates){
+    // returning edited link (as for now, to the last gateway from the array)
+    p2.innerHTML = x.split(' ').filter((a) => a !== "")[1].replace(/\.(.*)\//, "." + gates[gate] + "/");
+  }
+}
+// fn generating links to few alternative Arweave gateways, for the provided Arweave link
+function awl(x){
+  let gates = ["ar-io.dev", "permagate.io", "vilenarios.com", "arbr.pro", "bobinstein.com"];
+  let links = [];
+  for(gate in gates){
+    links.push(x.split(' ').filter((a) => a !== "")[1].replace(/\.(.*)\//, "." + gates[gate] + "/"));
+  }
+  // displaying the links and adding the 'Copy' button
+  p2.innerHTML = links.join(' \n ') + "<br><button id=\"btnCopy\">Copy</button>";
+  // fn to copy the links to the OS clipboard
+  document.getElementById('btnCopy').addEventListener('click', function(){navigator.clipboard.writeText(links.join(' \n '));});
 }
 </script>
 </html>
