--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <!-- <link rel="stylesheet" href="https://bafybeiait6atbrur3zr3mdny3qed26kj2d2s5e5qbl2dqhxqojlxpxkg3q.ipfs.dweb.link/?filename=stylesheet.css" type="text/css" charset="utf-8"/> -->
   <!-- GitHub logo for the footer-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <!-- for Bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
     body {
         background-color: darkslategray;
@@ -154,6 +156,7 @@
           <i class="fa fa-github fa-3x"></i>
         </a>
       </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.9.1/math.js'></script>
 <script>
