--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ function agc(x){
 }
 // fn generating links to few alternative Arweave gateways, for the provided Arweave link
 function awl(x){
-  let gates = ["ar-io.dev", "permagate.io", "vilenarios.com", "arbr.pro", "bobinstein.com"];
+  let gates = ["ar-io.dev", "permagate.io", "vilenarios.com", "love4src.com", "bobinstein.com", "arbr.pro"];
   let links = [];
   for(gate in gates){
     links.push(x.split(' ')[1].replace(/\.(.*)\//, "." + gates[gate] + "/"));
